[package]
name = "actors"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
wee_alloc = "0.4.5"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_cbor = { package = "cs_serde_cbor", version = "0.12", default-features = false, features = ["alloc"] }

shared = { path = "../shared" }


